Fixed visibility bug for dropdowns inside .table-responsive

--- a/src/Recruit/Client/wwwroot/css/app.css
+++ b/src/Recruit/Client/wwwroot/css/app.css
@@ -238,6 +238,10 @@ td .form-check-input {
     border-color: #cfcfcf;
 }
 
+.table-responsive .dropdown {
+    position: static;
+}
+
 .form-check-input.indeterminate {
     background-color: #0d6efd;
     border-color: #0d6efd !important;
